[package]
name = "dduct"
version = "0.1.0"
authors = ["sk4zuzu <sk4zuzu@gmail.com>"]
edition = "2018"

[lib]
name = "dduct"
path = "./src/lib.rs"

[[bin]]
name = "dduct"
path = "./src/bin.rs"

[dev-dependencies]
hex = "*"
rand = "*"
tempdir = "*"

[dependencies]
anyhow = "*"
env_logger = "*"
futures = "*"
http = "*"
lazy_static = "*"
log = "*"
nix = "*"
openssl = "*"
regex = "*"
sha-1 = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-native-tls = "*"
tokio-stream = "*"
tokio-util = { version = "*", features = ["full"] }
