[package]
name = "dduct"
version = "0.2.2"
authors = ["sk4zuzu <sk4zuzu@gmail.com>"]
edition = "2021"

[lib]
name = "dduct"
path = "./src/lib.rs"

[[bin]]
name = "dduct"
path = "./src/bin.rs"

[dev-dependencies]
hex = "*"
indoc = "*"
rand = "*"
tempdir = "*"

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
futures = "*"
http = "*"
log = "*"
nix = { version = "*", features = ["fs", "net"] }
openssl = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
sha-1 = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-native-tls = "*"
tokio-stream = "*"
tokio-util = { version = "*", features = ["full"] }
toml = "*"
